--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
                         app:layout_constraintBottom_toBottomOf="@+id/textIncome"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/textIncome"
-                        app:layout_constraintVertical_bias="0.6" />
+                        app:layout_constraintVertical_bias="0.4" />
 
                     <TextView
                         android:id="@+id/textBudget"
@@ -75,16 +75,18 @@
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textBudget" />
+
                     <TextView
                         android:id="@+id/textExpenses"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
                         android:text="@string/expenses"
                         android:textColor="@color/textSecondary"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/budget" />
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <TextView
                         android:id="@+id/expense"
                         android:layout_width="wrap_content"
@@ -100,44 +102,36 @@
                         android:id="@+id/indicatorExpenses"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="8dp"
                         android:src="@drawable/ic_arrow_up"
                         app:layout_constraintStart_toEndOf="@id/textExpenses"
                         app:layout_constraintTop_toTopOf="@id/textExpenses"
                         app:layout_constraintBottom_toBottomOf="@id/textExpenses"
                         android:contentDescription="@string/icon" />
+
                     <TextView
                         android:id="@+id/income"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="100dp"
+                        android:layout_marginEnd="92dp"
                         android:text=""
                         android:textColor="@color/textPrimary"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textIncome"/>
+                        app:layout_constraintTop_toBottomOf="@+id/textIncome" />
+
                     <TextView
                         android:id="@+id/textIncome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="80dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="8dp"
                         android:text="@string/income"
                         android:textColor="@color/textSecondary"
-                        app:layout_constraintEnd_toStartOf="@+id/indicatorIncome"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/indicatorIncome2"
                         app:layout_constraintTop_toTopOf="parent" />
-                    <ImageView
-                        android:id="@+id/indicatorIncome"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginEnd="16dp"
-                        android:contentDescription="@string/icon"
-                        android:src="@drawable/ic_arrow_down"
-                        app:layout_constraintBottom_toBottomOf="@+id/textIncome"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/textIncome"
-                        app:layout_constraintVertical_bias="0.6" />
+
                     <TextView
                         android:id="@+id/date"
                         android:layout_width="wrap_content"
@@ -172,6 +166,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+            <Button
+                android:id="@+id/addTransactionButton"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="@string/set_budget"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@id/main_card"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
             <TextView
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
@@ -180,10 +186,24 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintTop_toBottomOf="@+id/main_card"
+                app:layout_constraintTop_toBottomOf="@+id/addTransactionButton"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
+                />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/transaction_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"
+                android:nestedScrollingEnabled="true"
                 android:layout_marginTop="22dp"
+                android:layout_marginBottom="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/transaction_item"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text1"
+
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
