--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,7 +68,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="18dp"
-                        android:layout_marginTop="4dp"
                         android:text=""
                         android:textColor="@color/textPrimary"
                         android:textSize="28sp"
@@ -133,7 +132,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/date"
+                        android:id="@+id/period"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
@@ -167,7 +166,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
             <Button
-                android:id="@+id/addTransactionButton"
+                android:id="@+id/setBudgetButton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/set_budget"
@@ -186,7 +185,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/textPrimary"
-                app:layout_constraintTop_toBottomOf="@+id/addTransactionButton"
+                app:layout_constraintTop_toBottomOf="@+id/setBudgetButton"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
@@ -207,5 +206,17 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addNewFloatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:foregroundGravity="center"
+        android:src="@drawable/ic_add"
+        android:contentDescription="@string/add_transaction"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
