--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,7 +160,7 @@
         android:id="@+id/textResentBudgets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recent_budgets"
+        android:text="@string/budget_history"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="@color/textPrimary"
