--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     tools:context=".fragments.Home">
 
@@ -57,6 +58,7 @@
                 android:textColor="@color/textSecondary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/budget"
                 android:layout_width="wrap_content"
@@ -91,6 +93,7 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textExpenses" />
+
             <ImageView
                 android:id="@+id/indicatorExpenses"
                 android:layout_width="24dp"
@@ -106,12 +109,12 @@
                 android:id="@+id/income"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="92dp"
+                android:layout_marginEnd="16dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/indicatorIncome2"
                 app:layout_constraintTop_toBottomOf="@+id/textIncome" />
 
             <TextView
@@ -156,6 +159,7 @@
         app:layout_constraintTop_toBottomOf="@id/main_card"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/textResentBudgets"
         android:layout_width="wrap_content"
@@ -167,8 +171,8 @@
         app:layout_constraintTop_toBottomOf="@+id/setBudgetButton"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginTop="10dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/budgetRecyclerView"
         android:layout_width="match_parent"
