--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/transactionInfoText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Fill Transaction Information"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="16dp" />
+
     <EditText
         android:id="@+id/titleEditText"
         android:layout_width="0dp"
@@ -12,7 +25,7 @@
         android:hint="Title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/transactionInfoText" />
 
     <EditText
         android:id="@+id/categoryEditText"
