--- a/app/src/main/res/layout/budget_item.xml
+++ b/app/src/main/res/layout/budget_item.xml
@@ -43,21 +43,24 @@
                 android:layout_marginEnd="20dp"
                 android:text=""
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/budget_date_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
-            <!-- Новый TextView под budget_amount -->
             <TextView
                 android:id="@+id/budget_period_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:text=""
-                android:textSize="14sp"
                 android:textColor="@color/textSecondary"
-                app:layout_constraintTop_toBottomOf="@id/budget_amount"
-                app:layout_constraintEnd_toEndOf="@id/budget_amount" />
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@id/budget_amount"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/budget_date_title"
+                app:layout_constraintTop_toBottomOf="@id/budget_amount" />
 
             <TextView
                 android:id="@+id/budget_date_title"
