--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,12 +63,11 @@
                 android:id="@+id/budget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
-                android:textSize="28sp"
+                android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/textBudget"
                 app:layout_constraintTop_toBottomOf="@+id/textBudget" />
 
             <TextView
@@ -86,12 +85,11 @@
                 android:id="@+id/expense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="18dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/textExpenses"
                 app:layout_constraintTop_toBottomOf="@+id/textExpenses" />
 
             <ImageView
@@ -109,12 +107,11 @@
                 android:id="@+id/income"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@id/indicatorIncome2"
+                app:layout_constraintEnd_toEndOf="@+id/indicatorIncome2"
                 app:layout_constraintTop_toBottomOf="@+id/textIncome" />
 
             <TextView
