--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -25,20 +25,20 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/transactionUsernameTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text=""
                 android:textColor="@color/textPrimary"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/category"
+                app:layout_constraintBottom_toTopOf="@+id/transactionTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                android:id="@+id/category"
+                android:id="@+id/transactionTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -46,8 +46,8 @@
                 android:textColor="@color/textSecondary"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/title"
-                app:layout_constraintTop_toBottomOf="@+id/title" />
+                app:layout_constraintStart_toStartOf="@+id/transactionUsernameTitle"
+                app:layout_constraintTop_toBottomOf="@+id/transactionUsernameTitle" />
 
             <TextView
                 android:id="@+id/money"
@@ -56,6 +56,7 @@
                 android:layout_marginEnd="20dp"
                 android:text=""
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
