--- a/app/src/main/res/navigation/nav_graph_history.xml
+++ b/app/src/main/res/navigation/nav_graph_history.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_history_to_addTransactionFragment"
             app:destination="@id/AddTransactionFragment" />
+        <action
+            android:id="@+id/action_history_to_transactionDetailsFragment"
+            app:destination="@id/TransactionDetailsFragment" />
     </fragment>
 
     <fragment
@@ -35,9 +38,36 @@
         android:name="com.example.familybudgetmanager.fragments.AddTransactionFragment"
         android:label="AddTransactionFragment"
         tools:layout="@layout/fragment_add_transaction">
-
         <action
             android:id="@+id/action_AddTransactionFragment_to_HistoryFragment"
+            app:destination="@id/history_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/TransactionDetailsFragment"
+        android:name="com.example.familybudgetmanager.fragments.TransactionDetails"
+        android:label="TransactionDetailsFragment"
+        tools:layout="@layout/fragment_transaction_details">
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="category"
+            app:argType="string" />
+        <argument
+            android:name="amount"
+            app:argType="string" />
+        <argument
+            android:name="description"
+            app:argType="string" />
+        <argument
+            android:name="date"
+            app:argType="string" />
+        <argument
+            android:name="username"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_TransactionDetailsFragment_to_HistoryFragment"
             app:destination="@id/history_fragment" />
     </fragment>
 
