some app colors changed

--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -9,8 +9,8 @@
         android:id="@+id/transactionInfoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Fill Transaction Information"
-        android:textSize="18sp"
+        android:text="Add New Transaction"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
