--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -64,6 +64,7 @@
         android:foregroundGravity="center"
         android:src="@drawable/ic_add"
         android:contentDescription="@string/add_transaction"
+        app:backgroundTint="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
