--- a/app/src/main/res/layout/fragment_set_budget.xml
+++ b/app/src/main/res/layout/fragment_set_budget.xml
@@ -9,8 +9,8 @@
         android:id="@+id/budgetInfoText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Fill Budget Information"
-        android:textSize="18sp"
+        android:text="Set New Budget"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
