--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#0000FFFF</color>
     <color name="splashBackground">#232C3D</color>
+    <color name="colorPrimary">#027829</color>
+    <color name="colorSecondary">#DFFFE2</color>
+    <color name="colorBackground">#94FF9F</color>
 
     //Pi chart Colors
     <color name="green">#00D09C</color>
